--- a/WUnderground.Nova.Client/WUnderground.Nova.Client.nuspec
+++ b/WUnderground.Nova.Client/WUnderground.Nova.Client.nuspec
@@ -8,7 +8,7 @@
     <owners>ThisIsWhyTheInternetExists</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>A library for WUnderground weather data API</description>
-    <releaseNotes>Initial commit with support for retrieving weather data using city name and country code.</releaseNotes>
+    <releaseNotes>Adds support for retrieving weather conditions by Personal Weather Station ID</releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>WUnderground Weather API</tags>
   </metadata>
